[package]
name = "everest-mod-cli"
version = "3.2.4"
edition = "2024"
description = "A simple cli tool to manage mods for Celeste."
authors = ["pinpinroku <pinpinroku11600@tutanota.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pinpinroku/everest-mod-cli"
rust-version = "1.87"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.23", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.0"
mirror-list = { version = "0.1.1", path = "./mirror-list" }
once_cell = "1.21.3"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["gzip", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tempfile = "3.15.0"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
zip-search = { version = "0.1.0", path = "./zip-search" }

[workspace]
resolver = "3"
members = ["mirror-list", "zip-search"]

[profile.release]
lto = true   # Enable Link Time Optimization
strip = true # Automatically strip symbols from the binary.
