[package]
name = "hultra"
description = "A simple cli tool to update/install mods for Celeste."
version = "4.0.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
rust-version = "1.92"
authors = ["pinpinroku <pinpinroku11600@tutanota.com>"]
repository = "https://github.com/pinpinroku/hultra"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
futures-util = "0.3.31" # for `StreamExt` trait
indicatif = "0.18.0"
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["stream", "gzip"] }
rkyv = "0.8.13"
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
zip-finder = { version = "1.0.0", path = "./zip-finder" }

[dev-dependencies]
tempfile = "3.24.0"
zip = { version = "7.0.0", features = ["deflate"] }

[workspace]
resolver = "3"
members = ["zip-finder"]

[profile.release]
lto = true
strip = true
