[package]
name = "hultra"
description = "A simple cli tool to update/install mods for Celeste."
version = "5.3.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
rust-version = "1.94"
authors = ["pinpinroku <pinpinroku11600@tutanota.com>"]
repository = "https://github.com/pinpinroku/hultra"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
futures-util = "0.3.31" # for `StreamExt` trait
indicatif = "0.18.4"
rayon = "1.12.0"
reqwest = { version = "0.13.2", features = ["stream", "gzip", "json"] }
rkyv = "0.8.16"
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tempfile = "3.27.0"
thiserror = "2.0.16"
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread", "fs", "io-util", "sync", "time", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
zip = { version = "8.6.0", features = ["deflate"] }
zip-finder = { version = "1.0.0", path = "./zip-finder" }

[workspace]
resolver = "3"
members = ["zip-finder"]

[profile.release]
lto = true
strip = true
